# cerberus

./: .gitignore  .gitmodules  CMakeLists.txt  build.js  build.ts  cerberus.d.ts  package.json
lib/: index.js
src/: Cerberus.cpp  CerberusPlayer.cpp  CerberusPlayer.hpp  JsVlcInstance.cpp  JsVlcInstance.hpp  JsVlcMedia.cpp  JsVlcMedia.hpp  JsVlcMediaPlayer.cpp  JsVlcMediaPlayer.hpp  JsVlcPlayer.cpp  JsVlcPlayer.hpp
